--- a/client/index.html
+++ b/client/index.html
@@ -121,6 +121,8 @@
           <script src="app/article/singleArticle/singleArticle.js"></script>
           <script src="app/ask/ask.controller.js"></script>
           <script src="app/ask/ask.js"></script>
+          <script src="app/createstory/createstory.controller.js"></script>
+          <script src="app/createstory/createstory.js"></script>
           <script src="app/help/help.controller.js"></script>
           <script src="app/help/help.js"></script>
           <script src="app/landing/landing.controller.js"></script>
