--- a/client/app/about/about.html
+++ b/client/app/about/about.html
@@ -1,5 +1,25 @@
 <div ng-controller="AboutCtrl">
-	About
+	<p>
+		สวัสดีครับผมชื่อนายศุภกร เลาหสงคราม ตอนนี้ ไม่มีรายได้ ไม่มีงานประจํา ไม่มีหน้าตาอะไรในสังคม มีอย่างเดียวคือ จิตใจที่ต้องการจะทําดีต่อผู้อื่นโดยเชื่อว่าถ้าทําดีแล้วจะต้องอยู่รอดได้ ผมไม่ได้เอาความฉลาดในการหาเงินเป็นเดิมพันเพื่อการอยู่รอด ไม่ได้เอาความเก่งกาจ อํานาจ หรือวุตจากเมืองนอกอะไรมาเป็นเดิมพัน แต่จะเอาการทําดีที่ผมเคยทํา กําลังทํา และ จะทําเป็นเดิมพันโดยที่ผมเชื่อว่า
+
+		ถ้าทําดีจริง ยังไงสังคมก็ต้องช่วยและสนันสนุนความดีนั่น
+
+		ผมเชื่อในความดี และอยากให้คนอื่นเช่นกันเชื่อมั่นในความดีของตนและทําในสิ่งนั้นแบบไม่กลัวตาย
+
+		ถ้าคนทําดีจริง จะต้องอยู่รอดได้ เพราะมันดีจริง
+
+		ผมตั่งใจแล้วว่าชีวิตนี้จะใช้ชีวิตอย่างปรตูปชีวี คือ มีการเป็นอยู่ที่เนื่องอยู่ด้วยการให้ของผู้อื่น
+
+		ผมไม่รู้ว่าการเดิมพันครั่งนี้จะเป็นอย่างไร เรายังมีความหวังในมนุษยธรรมได้อยู่ไหม ความดีมันกินไม่ได้จริงหรือเปล่า หรือว่าในที่สุดแล้วความดีไม่มีค่าอะไรในสังคมเท่าสิ่งที่จับต้องได้
+
+		นี้คือการเดินทางเพื่อหาคําตอบโดยการเอาชีวิตเป็นตัวทดลอง
+
+		เป็นการก้าวเข้าไปสู่ความมืด ที่มีแต่การเดินต่อไปในความมืดนั้นเท่านั้นที่จะพาเราไปถึงเส้นชัย
+
+
+
+		แนการใช้ชีวิตประจําวัน
+	</p>
 
 
 </div>
