--- a/client/app/report/report.html
+++ b/client/app/report/report.html
@@ -11,10 +11,10 @@
 	  </div>
 
 	  <form class="row" style="margin-right:0; margin-left:0;">
-	  	<div class="col-sm-1 col-xs-12">
-		  	<img class="img-rounded userIcon" style="display: block; margin:10px auto; width:52px; height:52px" ng-src="{{currentUser.coverimg || 'https://kalie101.files.wordpress.com/2013/01/wpid-bn_avatar_builtin14.png'}}">
+	  	<div class="col-md-1 col-sm-2 col-xs-12">
+		  	<img class="img-rounded userIcon" style="display: block; margin:10px auto; width:60px; height:60px" ng-src="{{currentUser.coverimg || 'https://kalie101.files.wordpress.com/2013/01/wpid-bn_avatar_builtin14.png'}}">
 	  	</div>
-	  	<div class="col-sm-11 col-xs-12">
+	  	<div class="col-md-10 col-sm-10 col-xs-12">
 		  	<div class="input-group input-group-lg">
 		  	      <textarea type="text" rows="2" class="form-control" placeholder="ให้คําแนะนําที่นี้.." style="font-size:1.2em;" ng-model="reportInput" ng-focus="isLoggedIn()"></textarea>
 		  	      <span class="input-group-btn">
