--- a/client/app/article/singleArticle/singleArticle.html
+++ b/client/app/article/singleArticle/singleArticle.html
@@ -1,5 +1,6 @@
+<view-title>{{article.name}} -</view-title>
 <div ng-show="article"style="position: relative; overflow:hidden;">
-	<div class="background-blue" style="min-height:200px; position: relative;">
+	<div class="background-blue" parallax parallax-ratio="0.4"style="min-height:200px; position: relative;">
 		<div style="position: absolute; left: 50%; top:35%; z-index:20;">
 		    <div style="position: relative; left: -50%;">
 		      <h1 style="font-size:2.7em;text-shadow: 1px 1px 1px #969696;color:black;
@@ -11,28 +12,29 @@
 		  <a class="topic" style="color:black;" ng-href="/topics/{{article.topic}}"> {{article.topic}}</a> - 
 		  <a style="display:inline;" ng-repeat="tag in article.tags" ng-href="/tags/{{tag._id}}"><small style="color:black;">{{tag.name+" "}}</small></a>
 		</div>
-		<img ng-show="article.coverImg.length > 0" ng-src="{{article.coverImg}}" style="width:100%; opacity:0.7; z-index:-20; max-height: 450px; margin-top:-8px;"/>
+		<img ng-show="article.coverImg.length > 0" ng-src="{{article.coverImg}}" style="width:100%; opacity:0.7; z-index:-20; max-height: 450px;"/>
 	</div>
-<div class="container">
-	<div class="row">
-		<div class="col-md-2">
-		</div>
-		<div class="col-md-8">
-			<div style="margin: 0px;padding: 0px; margin-top:-20px;">
-			    <div class="col-md-3 col-xs-3 well"><i class="fa fa-thumbs-up"></i> โหวต<br>{{article.votes_count}}</div>
-			    <div class="col-md-3 col-xs-3 well"><i class="fa fa-share-alt"></i> แชร์<br>{{article.shares}}</div>
-			    <div class="col-md-3 col-xs-3 well"><i class="fa fa-eye"></i> ผู้ชม<br>{{article.views}}</div>
-			    <div class="col-md-3 col-xs-3 well"><i class="fa fa-comments"></i> ความเห็น<br>{{article.comments_count}}</div>
+<div class="container-fluid" style="z-index: 23; background: white; position:relative;">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-2"></div>
+			<div class="col-md-8">
+				<div style="margin: 0px;padding: 0px; margin-top:-20px;">
+				    <div class="col-md-3 col-xs-3 well"><i class="fa fa-thumbs-up"></i> โหวต<br>{{article.votes_count}}</div>
+				    <div class="col-md-3 col-xs-3 well"><i class="fa fa-share-alt"></i> แชร์<br>{{article.shares}}</div>
+				    <div class="col-md-3 col-xs-3 well"><i class="fa fa-eye"></i> ผู้ชม<br>{{article.views}}</div>
+				    <div class="col-md-3 col-xs-3 well"><i class="fa fa-comments"></i> ความเห็น<br>{{article.comments_count}}</div>
+				</div>
+				<div id="articleTopPanel">			
+					<h1>ความสําคัญของบทความนี้</h1>
+					<p>{{article.importance}}</p>
+					<hr style="width:75%;">
+					<h1>สรุปโดยสั่น</h1>
+					<p>{{article.summary}}</p>
+					<hr style="width:75%;">
+				</div>
+				<div class="articleBody" ta-bind ng-model="article.body" style="word-wrap: break-word; padding:25px; line-height:40px; font-size:25px; letter-spacing: 1px;"></div>
 			</div>
-			<div id="articleTopPanel">			
-				<h1>ความสําคัญของบทความนี้</h1>
-				<p>{{article.importance}}</p>
-				<hr style="width:75%;">
-				<h1>สรุปโดยสั่น</h1>
-				<p>{{article.summary}}</p>
-				<hr style="width:75%;">
-			</div>
-			<div class="articleBody" ta-bind ng-model="article.body" style="word-wrap: break-word; padding:25px; line-height:40px; font-size:25px; letter-spacing: 1px;"></div>
 		</div>
 	</div>
 </div>
