--- a/client/app/about/about.html
+++ b/client/app/about/about.html
@@ -1,4 +1,4 @@
-<div ng-controller="AboutCtrl" style="position:relative; overflow:hidden; margin-bottom:500px;">
+<div style="position:relative; overflow:hidden; margin-bottom:500px;">
 <!-- <div class="container-fluid"> -->
 	<img parallax parallax-ratio="0.4" src="http://lorempixel.com/1400/500" style="width: 100%; position:relative; z-index: -130;">
 
