--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -151,7 +151,7 @@
 
 						</div>
 
-						<div ng-bind-html="answer.content" style="word-wrap: break-word; padding:25px;"></div>
+						<div class="textAngular" ng-bind-html="answer.content" style="word-wrap: break-word; padding:25px;"></div>
 						<div style="text-align: right; margin-bottom: 10px;">							
 							<a ng-click="" style="margin: 15px;"><i class="fa fa-ban"></i> แจ้งความไม่เหมาะสม</a>
 							<a ng-click="" style="margin: 15px;"><i class="fa fa-comment"></i> ให้ความคิดเห็น</a>
@@ -199,7 +199,7 @@
 
 						</div>
 
-						<div ng-bind-html="userAns.content || textEditorInput" style="word-wrap: break-word; padding:25px;"></div>
+						<div class="textAngular" ng-bind-html="userAns.content || textEditorInput" style="word-wrap: break-word; padding:25px;"></div>
 						<div style="text-align: right; margin-bottom: 10px;">							
 							<!-- <a ng-click="" style="margin: 15px;"><i class="fa fa-ban"></i> แจ้งความไม่เหมาะสม</a> -->
 							<a ng-show="userAns" ng-click="" style="margin: 15px;"><i class="fa fa-comment"></i> ความคิดเห็น</a>
