--- a/client/app/service/service.html
+++ b/client/app/service/service.html
@@ -1,6 +1,7 @@
-<div ng-controller="serviceCtrl" class="container">
+<div class="container">
 	<div class="page-header">
-	  <h1>บริการเพื่อนใจ <small>ทําฟรี</small></h1>
+	  <h1>บริการเพื่อนใจ <small>ทําฟรี ทําจริง ทําด้วยใจ ไม่หวังผลตอบแทน เป็นทานแก่สังคม
+</small></h1>
 	</div>
 	<div class="row">
 	<div class="no-gutter col-sm-6 col-md-6">
@@ -13,7 +14,7 @@
 	    </div>
 	    <span class="label label-info" style="font-size:0.7em; position:absolute; left:12px; top:12px;">{{article.topic}}</span>
 	    <div class="caption" ng-class="{true: 'bigPadding', false: 'smallPadding'}[article.name.length <= 65]">
-	      <p>{{article.name}}</p>
+	      <!-- p>{{article.name}}</p>
 	      <hr style="margin-bottom: 7px; margin-top:7px;">
 	      <div class="row text-center">
 	        <div class="col-xs-4">
@@ -27,7 +28,7 @@
 	        <div class="col-xs-4">
 	          <i class="fa fa-eye"></i><br>
 	          <small>{{article.views}}</small>
-	        </div>
+	        </div> -->
 	      </div>
 	    </div>
 	  </div>
@@ -46,7 +47,7 @@
 	      <p>{{article.name}}</p>
 	      <hr style="margin-bottom: 7px; margin-top:7px;">
 	      <div class="row text-center">
-	        <div class="col-xs-4">
+<!-- 	        <div class="col-xs-4">
 	          <i class="fa fa-thumbs-up"></i><br>
 	          <small>{{article.votes_count}}</small>
 	        </div>
@@ -57,7 +58,7 @@
 	        <div class="col-xs-4">
 	          <i class="fa fa-eye"></i><br>
 	          <small>{{article.views}}</small>
-	        </div>
+	        </div> -->
 	      </div>
 	    </div>
 	  </div>
@@ -76,7 +77,7 @@
 	      <p>{{article.name}}</p>
 	      <hr style="margin-bottom: 7px; margin-top:7px;">
 	      <div class="row text-center">
-	        <div class="col-xs-4">
+<!-- 	        <div class="col-xs-4">
 	          <i class="fa fa-thumbs-up"></i><br>
 	          <small>{{article.votes_count}}</small>
 	        </div>
@@ -87,7 +88,7 @@
 	        <div class="col-xs-4">
 	          <i class="fa fa-eye"></i><br>
 	          <small>{{article.views}}</small>
-	        </div>
+	        </div> -->
 	      </div>
 	    </div>
 	  </div>
@@ -106,7 +107,7 @@
 	      <p>{{article.name}}</p>
 	      <hr style="margin-bottom: 7px; margin-top:7px;">
 	      <div class="row text-center">
-	        <div class="col-xs-4">
+<!-- 	        <div class="col-xs-4">
 	          <i class="fa fa-thumbs-up"></i><br>
 	          <small>{{article.votes_count}}</small>
 	        </div>
@@ -117,7 +118,7 @@
 	        <div class="col-xs-4">
 	          <i class="fa fa-eye"></i><br>
 	          <small>{{article.views}}</small>
-	        </div>
+	        </div> -->
 	      </div>
 	    </div>
 	  </div>
