--- a/client/app/contact/contact.html
+++ b/client/app/contact/contact.html
@@ -1,4 +1,4 @@
-<div ng-controller="contactCtrl" class="container">
+<div class="container">
 	<div class="page-header">
 	  <h1>ติดต่อเรา <small>ยินดีพูดคุยและรับฟังทุกเรื่องครับ</small></h1>
 	</div>
