--- a/client/app/suggestion/suggestion.html
+++ b/client/app/suggestion/suggestion.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="suggestCtrl">
+<div class="container">
 
 	<div class="page-header">
 	  <h1>แนะนําและเสนอไอเดียให้เพื่อนใจ <small>ยินดีรับฟังความคิดเห็นของทุกคนครับ</small></h1>
@@ -19,8 +19,8 @@
 		  	<div class="input-group input-group-lg">
 		  	      <textarea type="text" rows="2" class="form-control" placeholder="ให้คําแนะนําที่นี้.." style="font-size:1.2em;" ng-model="suggestionInput" ng-focus="isLoggedIn()"></textarea>
 		  	      <span class="input-group-btn">
-		  	        <button ng-show="editingSuggestion" class="btn btn-info" type="button" ng-click="editSuggestion()" style="height:80px;">แก้ไขคําแนะนํา</button>
-		  	        <button ng-hide="editingSuggestion" class="btn btn-info" type="button" ng-click="createSuggestion()" style="height:80px;">ให้คําแนะนํา</button>
+		  	        <button ng-show="editingSuggestion" class="btn btn-info" type="button" ng-click="editSuggestion()" style="height:78px;">แก้ไขคําแนะนํา</button>
+		  	        <button ng-hide="editingSuggestion" class="btn btn-info" type="button" ng-click="createSuggestion()" style="height:78px;">ให้คําแนะนํา</button>
 		  	      </span>
 		  	    </div><!-- /input-group -->
 	  	</div>
