--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
       <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.bootstrap.min.css" />
       <link rel="stylesheet" href="bower_components/jqcloud2/dist/jqcloud.css" />
       <link rel="stylesheet" href="bower_components/animate-css/animate.css" />
+      <link rel="stylesheet" href="bower_components/angular-carousel/dist/angular-carousel.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -101,6 +102,8 @@
       <script src="bower_components/angular-facebook/lib/angular-facebook.js"></script>
       <script src="bower_components/angular-parallax/scripts/angular-parallax.js"></script>
       <script src="bower_components/angularjs-viewhead/angularjs-viewhead.js"></script>
+      <script src="bower_components/angular-touch/angular-touch.js"></script>
+      <script src="bower_components/angular-carousel/dist/angular-carousel.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
