--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -3,6 +3,17 @@
   <div class="background-blue-gradient" style="height: 500px;"></div>
 <img src="/assets/images/background.png" style="width:100%;">
 </div>
+<!--           <carousel interval="4000" style="margin-bottom: 15px;">
+            <slide ng-repeat="slide in slides" active="slide.active" style="border-radius: 4px; cursor:pointer;" ng-click="goTo(slide.link)">
+              <img ng-src="{{slide.image}}" class="img-responsive img-rounded" style="margin:auto; height:300px; width:100%; border:1px solid #dddddd; border-radius:4px;">
+              <div class="carousel-caption">
+                <h1 style="font-size:3em; margin-bottom:65px;">{{slide.text}}</h1>
+              </div>
+            </slide>
+          </carousel> -->
+
+       <!-- <div class="clearfix"></div> -->
+
 
 
   <div id="questionSearch"class="input-group input-group-lg">
@@ -31,32 +42,87 @@
                  <tr ng-repeat="topic in topics" class="nav nav-stacked">
                      <td ng-class="{true: 'background-yellow', false: ''}[topic.active]">
            <a class="mainTopic" ng-click="selectTopic(topic.title);" href=''>
-                     <i class="fa {{topic.icon}}" style="font-size: 0.7em;"></i><br/>
                          {{topic.title}}
+                     <!-- <i class="fa {{topic.icon}}" style="font-size: 0.7em;"> </i> -->
                  </a>
                      </td>
                  </tr>
-         </tbody>
-      </table>
-      <div id="popTags" style="padding:0; background-color: white; border:none; margin: 25px 0;">
-         <h2 style="text-align: center; font-size: 2em; padding-bottom:15px; border-bottom: 1px solid #dddddd; ">แท็กยอดนิยม</h2>
-         <jqcloud id="jqcloudtag" style="width:100%; display: block; margin:0 auto;" autoResize="true" words="popTags" height="370" width="155"shape="rectangular" removeOverflowing="false" steps="7" center="{x:0.5, y:0.45}"></jqcloud> 
-      </div>
-      <a ng-href="/tags"><h3 class="text-center">ดูแท็กทั่งหมด..</h3></a>
-      <hr>
+           </tbody>
+        </table>
+        <hr>
+
+        <a ng-href="/about" class="col-md-12 col-sm-4 col-xs-12 no-gutter">
+          <div class="triangle-left text-center" style="width:100%; color:black;">
+            <h2>เกี่ยวกับเพื่อนใจ</h2>
+            <small>- ปรทัต -</small>
+          </div>
+          <img ng-src="/assets/images/logo.gif" style="width:100%;"/>
+        </a>
+
+        <a ng-href="/service" class="col-md-12 col-sm-4 col-xs-12 no-gutter">
+          <div class="triangle-right text-center" style="width:100%; color:black;">
+            <h2>บริการเพื่อนใจ</h2>
+            <small>- ทําฟรีด้วยรัก -</small>
+          </div>
+          <img ng-src="/assets/images/lighthouse.png" style="width:100%;"/>
+        </a>
+        <a ng-href="/contact" class="col-md-12 col-sm-4 col-xs-12 no-gutter">
+ <!--          <div id="contactus" class="sidebarBox text-center col-md-12 col-sm-4 col-xs-12 no-gutter" style="background: #FAF2DD;">
+            <div class="smallPadding sidebarInnerBox blueBorder">
+                <h2>ติดต่อกับเรา</h2>
+                <small>- ตลอด 24 ชี่วโมง -</small>
+            </div>
+            <img ng-src="/assets/images/contact.jpg"/>
+          </div> -->
+          <div class="triangle-left text-center" style="width:100%; color:black;">
+            <h1>ติดต่อกับเรา</h1>
+            <small>- ตลอด 24 ชี่วโมง -</small>
+          </div>
+          <img ng-src="/assets/images/happy_sunday.jpg" style="width:100%;"/>
+        </a>
+
+
+
+        
+<!--         <a ng-href="/about">
+          <div id="aboutus" class="sidebarBox text-center col-md-12 col-sm-4 col-xs-12 no-gutter" style="background: #ED6769;">
+            <div class="smallPadding sidebarInnerBox yellowBorder">
+                <h2>รู้จักกับผู้สร้าง</h2>
+                <small>- ปรทัต -</small>
+            </div>
+            <img ng-src="/assets/images/hello.png"/>
+          </div>
+        </a>
+
+        <a ng-href="/service" style="position:relative;">
+          <div id="service" class="sidebarBox text-center pinkGradient col-md-12 col-sm-4 col-xs-12 no-gutter">
+            <div class="smallPadding sidebarInnerBox blueBorder">
+            <h2>บริการเพื่อนใจ</h2>
+            <small>- ทําฟรีด้วยรัก -</small>
+
+            </div>
+            <div style="position: absolute; left: 50%; bottom:0;">
+                <div id="mainTitle" style="position: relative; left: -50%; z-index:121;">
+                  <i class="fa fa-heart fa-2x red"></i>
+                </div>
+            </div>
+            <img ng-src="/assets/images/cutecat.png"/>
+          </div>
+        </a> -->
+
      </div>
 
     <div class="col-md-8">
       <div class="row">
         <div class="col-md-12">
-          <carousel interval="4000" style="margin-bottom: 15px;">
-            <slide ng-repeat="slide in slides" active="slide.active" style="border-radius: 4px; cursor:pointer;" ng-click="goTo(slide.link)">
-              <img ng-src="{{slide.image}}" class="img-responsive img-rounded" style="margin:auto; height:300px; width:100%; border:1px solid #dddddd; border-radius:4px;">
-              <div class="carousel-caption">
-                <h1 style="font-size:3em; margin-bottom:65px;">{{slide.text}}</h1>
-              </div>
-            </slide>
-          </carousel>
+                  <carousel interval="4000" style="margin-bottom: 15px;">
+                    <slide ng-repeat="slide in slides" active="slide.active" style="border-radius: 4px; cursor:pointer;" ng-click="goTo(slide.link)">
+                      <img ng-src="{{slide.image}}" class="img-responsive img-rounded" style="margin:auto; height:300px; width:100%; border:1px solid #dddddd; border-radius:4px;">
+                      <div class="carousel-caption">
+                        <h1 style="font-size:3em; margin-bottom:65px;">{{slide.text}}</h1>
+                      </div>
+                    </slide>
+                  </carousel>
 
  <!--          <div class="row">
              <div class="col-md-4">
@@ -120,14 +186,14 @@
               <div class="clearfix">
               </div>
 
-              <div class="questionPanel inline row">
+              <div class="questionPanel inline row background-blue">
 
                 <div class="userPanel col-sm-4">
                   <div class="row">
-                    <div class="col-xs-4 no-gutter" style="margin: 15px 0;">
+                    <div class="col-md-4 col-sm-12 col-xs-4 no-gutter" style="margin: 15px 0;">
                       <img class="userIcon" ng-src="{{question.owner.coverimg}}" />
                     </div>
-                    <div class="col-xs-8 no-gutter" style="margin: 15px 0; text-align: center; font-size:0.9em;">
+                    <div class="col-md-8 col-sm-12 col-xs-8 no-gutter" style="margin: 10px 0; text-align: center; font-size:0.9em;">
                       <a ng-href="/users/{{question.ownerId}}"><small>{{question.owner.username}}</small></a><br/>
                       <small>{{question.created | timeAgo}}</small><br/>
                       <!-- <small>{{question.created | date:'MMM d, y h:mm a'}}</small> -->
@@ -136,7 +202,7 @@
                 </div>
 
                 <div class="col-sm-8">
-                <div class="row text-center" style="border-left: 1px solid #dddddd;">
+                <div class="row text-center background-yellow" style="border-left: 1px solid #dddddd;">
                   <p class="col-lg-3 col-sm-6 col-xs-6">ความช่วยเหลือ<br/>
                   <strong class="blue bigger"> {{question.answers_count | thousandSuffix}}</strong></p>
                   <p class="col-lg-3 col-sm-6 col-xs-6">ได้ความสําคัญ<br/>
@@ -154,9 +220,9 @@
                   <li>
                     <a ng-click="shareFB('/questions/{{question._id}}')"><i class="fa fa-share"></i> แชร์</a>
                   </li>
-                  <li>
+          <!--         <li>
                     <a ng-click=""><i class="fa fa-gratipay"></i> เก็บใจ</a>
-                  </li>
+                  </li> -->
                   <li>
                     <a ng-href="/questions/{{question._id}}"><i class="fa fa-child"></i> ช่วยเพื่อน</a>
                   </li>
@@ -180,13 +246,12 @@
         <a ng-show="questions.length >= 20" class="btn btn-default" style="display:block; margin-bottom: 15px;" ng-click="getMoreQuestions()">ดูเพิ่ม</a>
 
         <div class="row animated pulse" ng-show="questions.length < 1 && selectedTopic.$ne !== null">
-          <h2 style="text-align: center;">เป็นคนแรกที่ถามคําถามหัวข้อ <span class="bigger yellow">{{selectedTopic}}</span><br>มีเพื่อนใจมากมายที่รอให้การช่วยเหลือ!</h2><br>
-          <a ng-mouseover="shake='animated bounce'" ng-mouseleave="shake=''" style="font-size: 2em; width:30%; margin:0 auto;" class="btn btn-primary btn-lg btn-block" ng-href="/ask"><i ng-class="shake" class="fa fa-child"></i> ถาม</a><br>
-          <hr>
+          <h1 style="text-align: center; font-size:3em;">เป็นคนแรกที่ถามคําถามหัวข้อ <span class="bigger yellow">{{selectedTopic}}</span><br>มีเพื่อนใจมากมายที่รอให้การช่วยเหลือ!</h1><br>
+          <a ng-mouseover="shake='animated bounce'" ng-mouseleave="shake=''" style="font-size: 3em; width:30%; margin:0 auto;" class="btn btn-primary btn-lg btn-block" ng-href="/ask"><i ng-class="shake" class="fa fa-child"></i> ถาม</a><br>
         </div>
         </tabset>
 
-       <tabset class="col-md-12" justified="true" ng-show="defaultTab === 'articles'">
+      <!--  <tabset class="col-md-12" justified="true" ng-show="defaultTab === 'articles'">
 
         <div class="clearfix"></div>
 
@@ -233,8 +298,8 @@
           <a ng-show="articles.length >= 20" class="btn btn-default" style="display:block; margin:20px 0;" ng-click="getMoreArticles()">ดูเพิ่ม</a>
 
        </tabset>
-
-       <tabset class="col-md-12" justified="true" ng-show="defaultTab === 'books'">
+ -->
+      <!--  <tabset class="col-md-12" justified="true" ng-show="defaultTab === 'books'">
 
         <div class="clearfix"></div>
 
@@ -279,7 +344,7 @@
           </div>
         </div> 
           <a ng-show="articles.length >= 20" class="btn btn-default" style="display:block; margin:20px 0;" ng-click="getMoreArticles()">ดูเพิ่ม</a>
-       </tabset>
+       </tabset> -->
 
 
       </div>
