--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -1,5 +1,5 @@
 <view-title>{{question.name}} -</view-title>
-<div class="container">
+<div class="container-fluid">
 
 	<div class="col-md-2">
 <!-- 		<div class="panel panel-default panel-card">
@@ -54,9 +54,9 @@
 						<li>
 							<a ng-click="shareFB('/questions/{{question._id}}')"><i class="fa fa-share"></i><br>แชร์</a>
 						</li>
-						<li>
+			<!-- 			<li>
 							<a ng-click=""><i class="fa fa-gratipay"></i><br>เก็บใจ</a>
-						</li>
+						</li> -->
 					</ul>
 				</div>
 
@@ -71,13 +71,13 @@
 						<div style="margin: 0 10px;">
 							<i class="fa fa-tag"></i>
 							<a class="topic" ng-href="/topics/{{question.topic}}">{{question.topic}} -</a>
-							<a style="display:inline;" ng-repeat="tag in question.tags" ng-href="/tags/{{tag._id}}">{{tag.name+" "}}</a>
+							<a style="display:inline;" ng-repeat="tag in question.tags" ng-href="/tags/{{tag._id}}"><span class="label label-info" style="margin:0 5px;">{{tag.name}}</span></a>
 						</div>
 					</div>
 
 					<div class="questionContent">
 						<div ta-bind ng-model="question.body" style="word-wrap: break-word; padding:25px;"></div>
-						<hr style="width:80%;">
+						<hr style="width:85%; margin-bottom:10px;">
 						<div class="row" style="padding: 15px;margin-right: 0;margin-left:0;">
 							<div class="col-md-4">
 								<div class="row userPanelQuestion">
@@ -92,20 +92,20 @@
 								</div>
 							</div>
 							<div class="col-md-8 text-center">
-								<div class="row">
-									<div class="col-md-6" style="margin-top:15px;">
-										<a ng-click="report()"><i class="fa fa-ban"></i> แจ้งความไม่เหมาะสม</a>
-									</div>
-									<div class="col-md-6" style="margin-top:15px;">
-										<a ng-click=""><i class="fa fa-comment"></i> ให้ความคิดเห็น</a>
-									</div>
-								</div>
 								<div ng-show="questionOwner()" class="row">
 									<div class="col-md-6" style="margin-top:15px;">
 										<a ng-click="editQuestion()"><i class="fa fa-pencil"></i> แก้ไขคําถามนี้</a>
 									</div>
 									<div class="col-md-6" style="margin-top:15px;">
 										<a ng-click="deleteQuestion()"><i class="fa fa-trash-o"></i> ลบคําถามนี้</a>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-md-6" style="margin-top:15px;">
+										<a ng-hide="questionOwner()"ng-click="report()"><i class="fa fa-ban"></i> แจ้งความไม่เหมาะสม</a>
+									</div>
+									<div class="col-md-6" style="margin-top:15px;">
+										<a ng-click=""><i class="fa fa-comment"></i> ให้ความคิดเห็น</a>
 									</div>
 								</div>
 
