--- a/client/index.html
+++ b/client/index.html
@@ -160,6 +160,7 @@
           <script src="components/navbar/navbar.controller.js"></script>
           <script src="components/sidebar/leftsidebar.controller.js"></script>
           <script src="components/sidebar/rightsidebar.controller.js"></script>
+          <script src="components/sidebar/tagCloud.controller.js"></script>
           <script src="components/socket/socket.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
